# DB_Kurs

./: CMakeLists.txt  RangeSlider.cpp  RangeSlider.h  checkoutdialog.cpp  checkoutdialog.h  checkoutdialog.ui  database.cpp  database.h  database_author.cpp  database_book.cpp  database_cart.cpp  database_comment.cpp  database_connection.cpp  database_customer.cpp  database_order.cpp  datatypes.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_authors.cpp  mainwindow_books.cpp  mainwindow_cart.cpp  mainwindow_comments.cpp  mainwindow_orders.cpp  mainwindow_profile.cpp  mainwindow_search.cpp  mainwindow_utils.cpp  profiledialog.cpp  profiledialog.h  profiledialog.ui  resourses.qrc  searchsuggestiondelegate.cpp  searchsuggestiondelegate.h  starratingwidget.cpp  starratingwidget.h  target_include_directories(untitled PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})  (+2 more)
sql/: author_queries.sql  book_queries.sql  customer_queries.sql  loyalty_trigger.sql  schema.sql
sql/functions/: calculate_average_rating.sql
